# tdd-platform

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  hostSetup  hostSetup.cmd  hostSetup.ps1  hostSetup.sh
.github/: dependabot.yml  dependbot.yml
.github/workflows/: CI.yml  cmakeMatcher.json  container.yml  extended_tests.yml  fuzzing.yml
doc/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt
lib/fff/: CMakeLists.txt
lib/mongoose/: CMakeLists.txt  mongoose_custom.h
platform/: CMakeLists.txt  gpio.h  i2c.h  platform.h  sockets.h  task.h
platform/carme-m4/: CMakeLists.txt  environment.sh  gpio.c  platform.c  stm32f4_flash.ld  stm32f4_ram.ld  stm32f4xx_it.c
platform/carme-m4/Libraries/FreeRTOS/: FreeRTOSConfig.h  memPoolService.h
platform/esp32/: CMakeLists.txt  cacrt_all.patch  environment.sh  gpio.c  i2c.c  platform.c  sdkconfig.defaults  task.c
platform/esp8266/: CMakeLists.txt  environment.sh  gpio.c  platform.c  pthread.patch
platform/linux/: CMakeLists.txt  clang.cmake  gpio.c  gpio_extra.h  i2c.c  i2c_extra.h  platform.c  task.c
src/: CMakeLists.txt  main.c
src/buggy_api/: CMakeLists.txt  buggy_api.c  buggy_api.h
src/mylib/: CMakeLists.txt  mylib.c  mylib.h
test/: CMakeLists.txt  mylib.c  test.h
tests/: CMakeLists.txt
tests/fuzzing/: CMakeLists.txt  buggy_api.c  buggy_api.cc  fuzzing.h
tests/fuzzing/buggy_api/: CMakeLists.txt  api_helper.h  buggy_api.cc  buggy_api.proto  dummy.h  schema.yaml
tests/fuzzing/buggy_api_graphfuzz/: CMakeLists.txt  schema.yaml
tests/fuzzing/buggy_api_proto/: CMakeLists.txt  buggy_api.cc  buggy_api.proto
tests/integration/: CMakeLists.txt
tests/static/: CMakeLists.txt
tests/symbolic/: CMakeLists.txt  klee-runner.sh  symbolic.h
tests/symbolic/buggy_api/: CMakeLists.txt  buggy_api.c
tests/unit/: CMakeLists.txt
tests/unit/mylib/: CMakeLists.txt
